--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "stylelint-config-recess-order": "^1.0.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-html": "^1.0.0",
-    "vue-cli": "^2.8.1",
+    "vue-cli": "2.8.1",
     "vue-loader": "^11.3.4",
     "webpack": "^2.3.3"
   },
